# flywheel-v2

./: .env.example  .gitignore  DESIGN-BRIEF-LIBRARY.md  README.md  docker-compose.yml  pipeline-sketch.html  start-dev.sh  stop-dev.sh
backend/: Dockerfile  alembic.ini  pyproject.toml  railway.toml  test_phase55.py
backend/.planning/debug/: crawl-zero-entries.md
backend/.planning/quick/1-add-metadata-jsonb-column-to-context-ent/: 1-PLAN.md  1-SUMMARY.md
backend/.planning/quick/2-refactor-public-users-to-public-profiles/: 2-PLAN.md  2-SUMMARY.md
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 002_enable_rls_policies.py  003_fts_and_indexes.py  004_add_invites_table.py  005_add_integrations_table.py  006_enable_realtime_skill_runs.py  007_learning_engine.py  008_fix_dismissal_rls_policy.py  009_add_reasoning_trace.py  010_context_graph_tables.py  011_focus_tables.py  012_work_stream_tables.py  013_sub_threads.py  014_meeting_classification.py  015_density_snapshots.py  016_nudge_interactions.py  017_context_entry_metadata.py  018_skill_registry.py  019_documents.py  020_email_models.py  021_tenant_domain_unique.py  022_companies_table.py  023_tenant_company_link.py  024_users_to_profiles.py  025_uploaded_files_metadata.py  026_documents_storage_path_nullable.py  027_crm_tables.py  028_relationship_type_entity_level_ai_summary.py  029_status_rename_phase_a.py  030_graduated_at.py  031_user_level_rls.py  032_create_meetings_table.py  033_unify_meetings_table.py  034_create_tasks_table.py  035_add_email_task_fields.py  036_voice_profile_expansion.py  037_context_extraction_pipeline.py  038_add_invite_token_column.py  039_normalize_fit_tier_values.py  040_create_leads_tables.py  041_lead_user_scoping.py  (+25 more)
backend/scripts/: 049_apply_saved_views.py  apply_062_skill_protected_default.py  apply_064_skill_assets_table.py  apply_065_depends_on_column.py  apply_067_skill_execution_telemetry.py  apply_rls_policies.py  broker_data_model_migration.py  broker_migration.py  broker_schema_mods_01.py  broker_schema_mods_02.py  broker_schema_mods_03.py  fix_document_field_names.py  load_broker_leads.py  repopulate_body_preview.py  seed_broker_demo.py  seed_broker_pdfs.py  seed_broker_rich.py  seed_coverage_taxonomy.py  verify_parity_156.py
backend/scripts/portals/: README.md  mapfre_mx.py
backend/src/: context_utils.py
backend/src/flywheel/: __init__.py  config.py  context_utils.py  import_meetings.py  import_research.py  main.py  migration_tool.py  seed_crm.py  storage.py  storage_backend.py
backend/src/flywheel/api/: __init__.py  accounts.py  admin.py  agent_ws.py  auth.py  briefing.py  broker.py  broker_legacy.py  chat.py  context.py  deps.py  documents.py  email.py  errors.py  files.py  focus.py  gather.py  graph.py  health.py  integrations.py  leads.py  learning.py  meetings.py  onboarding.py  outreach.py  pipeline.py  profile.py  relationships.py  saved_views.py  signals.py  skills.py  slack_events.py  streams.py  tasks.py  team_onboarding.py  tenant.py  timeline.py  user.py  work_items.py
backend/src/flywheel/auth/: __init__.py  anonymous.py  encryption.py  jwt.py  supabase_client.py
backend/src/tests/: conftest.py  test_auth.py  test_auth_endpoints.py  test_auth_refresh.py  test_broker_410_cutover.py  test_broker_extract_save_endpoints.py  test_broker_zero_anthropic.py  test_bundle_handler_db_count.py  test_context_api.py  test_context_batch.py  test_context_utils.py  test_document_contract.py  test_files_api.py  test_integrations_api.py  test_leads_api.py  test_migration_tool.py  test_normalize.py  test_onboarding_sse.py  test_ping_endpoint.py  test_rate_limit.py  test_seed_bundles.py  test_skill_assets_model.py  test_skills_api.py  test_storage.py  test_storage_backend.py  test_subsidy_enforcement.py  test_tenant_endpoints.py  test_timing_middleware.py  test_work_items_api.py
cli/: README.md  pyproject.toml
cli/flywheel/broker/: __init__.py  api_client.py  field_validator.py
cli/flywheel_cli/: __init__.py  auth.py  config.py  http_context.py  main.py
cli/flywheel_cli/agent/: __init__.py  browser.py  commands.py  connection.py  protocol.py
cli/flywheel_mcp/: api_client.py  bundle.py  cache.py  errors.py  server.py
cli/flywheel_mcp/templates/: CLAUDE.md
cli/tests/: conftest.py  test_auth.py  test_bundle.py  test_cache.py  test_error_messages.py  test_http_context.py  test_main.py  test_mcp_assets_tool.py  test_refresh_skills.py
(+1270 files in other folders)
