[project]
name = "flywheel-backend"
version = "0.1.0"
description = "Flywheel v2 backend - knowledge compounding engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyjwt>=2.12.1",
    "cryptography>=46.0.5",
    "supabase>=2.28.2",
    "sse-starlette>=3.3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flywheel"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["src/flywheel/engines/*", "src/flywheel/context_utils.py"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "flywheel.engines.*",
    "flywheel.context_utils",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
asyncio_mode = "auto"
markers = [
    "postgres: tests requiring Docker Postgres on port 5434",
]
