[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flywheel-cli"
version = "0.1.0"
description = "Flywheel CLI — context management from the terminal"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
flywheel = "flywheel_cli.main:cli"
