[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flywheel-cli"
version = "0.1.0"
description = "Flywheel CLI and MCP server -- context management from the terminal and Claude Code"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
    "playwright>=1.40.0",
    "websockets>=12.0",
    "fastmcp>=2.0",
]

[project.scripts]
flywheel = "flywheel_cli.main:cli"
flywheel-mcp = "flywheel_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["flywheel_cli", "flywheel_mcp"]
