[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flywheel-ai"
version = "0.2.0"
description = "Flywheel CLI and MCP server — business intelligence from the terminal and Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Lumif.ai", email = "hello@lumifai.tech" },
]
keywords = ["flywheel", "mcp", "claude-code", "business-intelligence", "crm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
    "playwright>=1.40.0",
    "websockets>=12.0",
    "fastmcp>=2.9",
]

[project.urls]
Homepage = "https://lumifai.tech"

[project.scripts]
flywheel = "flywheel_cli.main:cli"
flywheel-mcp = "flywheel_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["flywheel_cli", "flywheel_mcp"]
